--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,34 +1,42 @@
-= form_for @user do |f|
+= form_for @user, :html => {:class => "form-horizontal"}  do |f|
   - if @user.errors.any?
     #error_explanation
       %h2= "#{pluralize(@user.errors.count, "error")} prohibited this user from being saved:"
       %ul
         - @user.errors.full_messages.each do |msg|
           %li= msg
-
-  .field
-    = f.label :fbid
-    = f.text_field :fbid
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :email
-    = f.text_field :email
-  .field
-    = f.label :host
-    = f.text_field :host
-  .field
-    = f.label :arrival_date
-    = f.text_field :arrival_date
-  .field
-    = f.label :departure_date
-    = f.text_field :departure_date
-  .field
-    = f.label :where_from
-    = f.text_field :where_from
-  .field
-    = f.label :why_in_sf
-    = f.text_area :why_in_sf
-  .actions
-    = f.submit 'Save'
+  .form-group
+    = f.label :fbid, :class => "col-sm-2 control-label"
+    .col-sm-10
+      = f.text_field :fbid, :class => "form-control"
+  .form-group
+    = f.label :name, :class => "col-sm-2 control-label"
+    .col-sm-10
+      = f.text_field :name, :class => "form-control"
+  .form-group
+    = f.label :email, :class => "col-sm-2 control-label"
+    .col-sm-10
+      = f.text_field :email, :class => "form-control"
+  .form-group
+    = f.label :host, :class => "col-sm-2 control-label"
+    .col-sm-10
+      = f.text_field :host, :class => "form-control"
+  .form-group
+    = f.label :arrival_date, :class => "col-sm-2 control-label"
+    .col-sm-10
+      = f.date_field :arrival_date, :class => "form-control"
+  .form-group
+    = f.label :departure_date, :class => "col-sm-2 control-label"
+    .col-sm-10
+      = f.date_field :departure_date, :class => "form-control"
+  .form-group
+    = f.label :where_from, :class => "col-sm-2 control-label"
+    .col-sm-10
+      = f.text_field :where_from, :class => "form-control"
+  .form-group
+    = f.label :why_in_sf, :class => "col-sm-2 control-label"
+    .col-sm-10
+      = f.text_area :why_in_sf, :class => "form-control"
+  .form-group
+    .col-sm-10.col-sm-offset-2
+      = f.submit 'Save', :class => "btn btn-primary"
