--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New user
-
-= render 'form'
-
-= link_to 'Back', users_path
+.container
+  .row
+    .col-sm-12
+      %h3 Add yourself to the Agape Guestbook!
+      = render 'form'
