--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,8 @@
   %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}
   = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
   = javascript_include_tag "application", "data-turbolinks-track" => true
+  %script{src: "http://code.jquery.com/jquery-1.10.1.min.js"}
+  %script{src: "http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"}
   = csrf_meta_tags
 %body{:id => params[:controller] + '-' + params[:action] }
   %nav.navbar.navbar-default
