--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -4,7 +4,7 @@
       .col-sm-2.user-badge
         = link_to image_tag("http://graph.facebook.com/#{user.fbid}/picture?type=large"), "http://www.facebook.com/#{user.fbid}", :target => "_blank"
         %span.name #{user.name}
-      .col-sm-10
+      .col-sm-10.user-info
         .row
           .col-sm-12
             .stay
