--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,6 +1,6 @@
 body {
-  background-color: #fff;
-  color: #333;
+  background: url("http://wallpoper.com/images/00/25/71/46/wood-textures_00257146.jpg");
+  color: white;
   font-family: times-new-roman;
   font-size: 15px;
   line-height: 20px;
@@ -18,12 +18,12 @@ pre {
 }
 
 a {
-  color: #000;
+  color: white;
   &:visited {
     color: #666;
   }
   &:hover {
-    color: #fff;
+    color: white;
     background-color: #000;
   }
 }
@@ -72,6 +72,7 @@ div {
 }
 
 .navbar {
+  border-radius: 0;
   button.signin {
     margin-top: 30px;
   }
