--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
 %head
-  %title Guestbook
+  %title The Agape Guestbook
   %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}
   = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
   = javascript_include_tag "application", "data-turbolinks-track" => true
