--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,14 +1,3 @@
-.modal.fade#termsModal
-  .modal-dialog
-    .modal-content
-      .modal-header
-        %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
-        %h4.modal-title Agape guest guidelines
-      .modal-body
-        %p Agape guideline will go here
-      .modal-footer
-        %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Close
-
 = form_for @user, :html => {:class => "form-horizontal"}  do |f|
   - if @user.errors.any?
     #error_explanation
@@ -49,7 +38,7 @@
       %span
         = check_box_tag "accept-tos"
         I have read and understand the
-        = link_to "Agape guest guidelines", "#termsModal", :data => {:toggle => "modal"}
+        = link_to "Agape guest guidelines", "#", :id => "see-guest-guidelines"
   .form-group
     .col-sm-10.col-sm-offset-2
       = f.submit 'Save', :class => "btn btn-primary disabled", :id => "submit-button"
