--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,64 +1,7 @@
--# loop through users, add modals
-.container.content-container
-  .row
-    .col-sm-12
-      %h3 Current guests
-  .row
-  - @current_guests.each do |user|
-    .col-sm-3.user-image
-      = link_to image_tag(user.pic, :class => "fb-pic"), "#", {:class => "user-profile", :data => {:id => user.id}}
-      %p= user.name
-.container.content-container
-  .row
-    .col-sm-12
-      %h3 Upcoming guests
-  .row
-  - @upcoming_guests.each do |user|
-    .col-sm-3.user-image
-      = link_to image_tag(user.pic, :class => "fb-pic"), "#", {:class => "user-profile", :data => {:id => user.id}}
-      %p= user.name
-.container.content-container
-  .row
-    .col-sm-12
-      %h3 Past guests
-  .row
-  - @past_guests.each do |user|
-    .col-sm-3.user-image
-      = link_to image_tag(user.pic, :class => "fb-pic"), "#", {:class => "user-profile", :data => {:id => user.id}}
-      %p= user.name
+-# generate sections for current, upcoming, past guests
+= render :partial => "users/guest_section", :locals => {:label => "Current Guests", :guests => @current_guests}
+= render :partial => "users/guest_section", :locals => {:label => "Upcoming guests", :guests => @upcoming_guests}
+= render :partial => "users/guest_section", :locals => {:label => "Past Guests", :guests => @past_guests}
 
--#modals
-- (@current_guests + @upcoming_guests + @past_guests).each do |user|
-  %div{:class => "modal fade", :id => "user-#{user.id}"}
-    .modal-dialog
-      .modal-content
-        .modal-header
-          %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
-          %h4.modal-title #{user.name}
-        .modal-body
-          = link_to image_tag(user.pic, :class => "fb-pic fb-pic-modal"), "http://www.facebook.com/#{user.fbid}", :target => "_blank"
-          %table
-            %tr.name
-              %th Name:
-              %td #{user.name}
-            %tr.stay
-              %th Dates:
-              %td
-                %span #{user.arrival_date.strftime("%b %-d")}
-                &ndash;
-                %span #{user.departure_date.strftime("%b %-d")}
-            %tr.hosted-by
-              %th Hosted by:
-              %td
-                #{Resident.find(user.host).name}
-            %tr.where-from
-              %th From:
-              %td #{user.where_from}
-            - unless user.why_in_sf.empty?
-              %tr.why_in_sf
-                %th Why in SF?
-                %td #{user.why_in_sf}
-        .modal-footer
-          %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Close
-
-
+-# generate modals for when user pics get clicked for more info.
+= render :partial => "users/modals", :locals => {:guests => @current_guests + @upcoming_guests + @past_guests}
