--- a/app/views/residents/_form.html.haml
+++ b/app/views/residents/_form.html.haml
@@ -10,7 +10,7 @@
     = f.label :name
     = f.text_field :name
   .field
-    = f.label :fbid
-    = f.text_field :fbid
+    = f.label :uid
+    = f.text_field :uid
   .actions
     = f.submit 'Save'
