--- a/app/views/residents/show.html.haml
+++ b/app/views/residents/show.html.haml
@@ -4,8 +4,8 @@
   %b Name:
   = @resident.name
 %p
-  %b Fbid:
-  = @resident.fbid
+  %b uid:
+  = @resident.uid
 
 = link_to 'Edit', edit_resident_path(@resident)
 \|
