--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @user, :html => {:class => "form-horizontal"}  do |f|
+= form_for @user, :html => {:class => "form-horizontal"}, method: :patch do |f|
   - if @user.errors.any?
     #error_explanation
       %h2= "#{pluralize(@user.errors.count, "error")} prohibited this user from being saved:"
