--- a/app/views/users/_modals.html.haml
+++ b/app/views/users/_modals.html.haml
@@ -6,7 +6,7 @@
           %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
           %h4.modal-title #{user.name}
         .modal-body
-          = link_to image_tag(user.pic, :class => "fb-pic fb-pic-modal"), "http://www.facebook.com/#{user.fbid}", :target => "_blank"
+          = link_to image_tag(user.pic, :class => "fb-pic fb-pic-modal"), "http://www.facebook.com/#{user.uid}", :target => "_blank"
           %table
             %tr.name
               %th Name:
