--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -86,6 +86,14 @@ div {
   margin-bottom: 20px;
 }
 
+.silly-nav {
+  a {
+    display: inline-block;
+    margin: 0 20px 0 0;
+    padding: 0;
+  }
+}
+
 .navbar {
   border-radius: 0;
   button.signin {
