--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,10 +14,9 @@
       .col-sm-12
         %h1
           Ohai#{", " + current_user.name if current_user}. Welcome to the Agape Guestbook.
+        %h1.silly-nav
+          = link_to "Home", root_url
+          = link_to "Update profile", edit_user_path(current_user.id) if current_user
           = link_to "Sign out", signout_path, id: "sign_out" if current_user
-    .row
-      .col-sm-12
-        .options
-          - unless current_user
-            = link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in"
+          = link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" unless current_user
   = yield
