--- a/app/views/users/_guest_section.html.haml
+++ b/app/views/users/_guest_section.html.haml
@@ -6,4 +6,4 @@
     - guests.each do |user|
       .col-sm-3.user-image
         = link_to image_tag(user.pic, :class => "fb-pic"), "#", {:class => "user-profile", :data => {:id => user.id}}
-        %p= user.name
+        %p= user.first_name
