--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -6,9 +6,13 @@
         - @user.errors.full_messages.each do |msg|
           %li= msg
   .form-group
-    = f.label :name, :class => "col-sm-2 control-label"
+    = f.label :first_name, :class => "col-sm-2 control-label"
     .col-sm-10
-      = f.text_field :name, :class => "form-control"
+      = f.text_field :first_name, :class => "form-control"
+  .form-group
+    = f.label :last_name, :class => "col-sm-2 control-label"
+    .col-sm-10
+      = f.text_field :last_name, :class => "form-control"
   .form-group
     = f.label :email, :class => "col-sm-2 control-label"
     .col-sm-10
