--- a/app/views/users/_modals.html.haml
+++ b/app/views/users/_modals.html.haml
@@ -4,13 +4,13 @@
       .modal-content
         .modal-header
           %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
-          %h4.modal-title #{user.name}
+          %h4.modal-title #{user.first_name} #{user.last_name}
         .modal-body
           = link_to image_tag(user.pic, :class => "fb-pic fb-pic-modal"), "http://www.facebook.com/#{user.uid}", :target => "_blank"
           %table
             %tr.name
               %th Name:
-              %td #{user.name}
+              %td #{user.first_name} #{user.last_name}
             %tr.stay
               %th Dates:
               %td
