--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -11,5 +11,5 @@
 .container.content-container
   .row
     .col-sm-12
-      %h3 Fill out your profile on the Agape Guest Book!
+      %h3.heading Fill out your profile on the Agape Guest Book!
       = render 'form'
