--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,7 @@
  *
  *= require_self
  */
+@import url(http://fonts.googleapis.com/css?family=Enriqueta:400,700);
 @import "bootstrap";
 @import "scaffolds";
 @import "users";
