--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,6 +22,7 @@
           %p
             (It'll ask you to connect to Facebook. Don't be alarmed. We only ask so that we can add your beautiful face to the site.)
         %p.silly-nav
+          = link_to "Home", root_url if current_user
           = link_to "Update profile", edit_user_path(current_user.id) if current_user
           = link_to "Sign out", signout_path, id: "sign_out" if current_user
   = yield
