--- a/app/views/users/_modals.html.haml
+++ b/app/views/users/_modals.html.haml
@@ -24,9 +24,13 @@
             %tr.where-from
               %th From:
               %td #{user.where_from}
-            - unless user.why_in_sf.empty?
+            - unless user.why_in_sf.blank?
               %tr.why_in_sf
                 %th Why in SF?
                 %td #{user.why_in_sf}
+            - unless user.note.blank?
+              %tr.why_in_sf
+                %th Note:
+                %td #{user.note}
         .modal-footer
           %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Close
