--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,11 +3,17 @@
 %head
   %title The Agape Guestbook
   %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}
+  %meta{name: "description", content: "The guest book for the Agape house."}
+  -#FB Meta Tags
+  %meta{property: "og:title", content: "The Agape Guestbook"}
+  %meta{property: "og:type", content: "website"}
+  %meta{property: "og:image", content: "#{root_url}agape-logo-1000.png"}
+  %meta{content: "1000", property: "og:image:width"}
+  %meta{content: "626", property: "og:image:height"}
   = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
   = javascript_include_tag "application", "data-turbolinks-track" => true
   %script{src: "http://code.jquery.com/jquery-1.10.1.min.js"}
   %script{src: "http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"}
-  -#refactor this later!!!
   = csrf_meta_tags
 %body{:id => params[:controller] + '-' + params[:action] }
   .container.content-container.welcome
