--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -50,4 +50,16 @@
   #user_note {
     height: 150px;
   }
+  .modal-body {
+    .agape-logo {
+      margin-bottom: 40px;
+      img {
+        width: 100%;
+      }
+    }
+    .guidelines {
+      li {
+      }
+    }
+  }
 }
