--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -5,7 +5,49 @@
         %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
         %h4.modal-title Agape guest guidelines
       .modal-body
-        %p Agape guideline will go here
+        .agape-logo
+          = image_tag "/agape-logo-1000.png"
+        %p
+          Welcome to Agape!  Your presence is a gift &mdash; thank you for sharing some time with us!
+        %p
+          Below are some helpful bits to familiarize yourself with Agape. When in doubt, ask an Agapite!
+        %ul.guidelines
+          %li
+            %p
+              %strong Doors:
+              The code to get into the house is 3417.  When entering the house, enter code and turn lock to the right; when exiting, turn it to the left.  Please be mindful about making sure doors are closed and locked and cats don’t run out late at night.
+          %li
+            %p
+              %strong Wifi:
+              The Agape and Netgear networks all work with the password giganticfire232.  Different networks work better for different parts of the house, so you may want to switch networks depending on where you are.
+          %li
+            %p
+              %strong Shoes:
+              No shoes should be worn inside.  We have extra fuzzy socks if you need though!
+          %li
+            %p
+              %strong Leave No Trace:
+              Please help us in optimizing our home for collaborative space by maintaining tidiness and a “Leave No Trace” benchmark, and asking your guests to do the same.
+          %li
+            %p
+              %strong Kitchen:
+              You are welcome to any food, etc. from the parts of the kitchen labeled “communal,” which are items purchased communally for the house.  If you aren’t paying to stay with us, we encourage you to donate to the Agape Awesome Fund (the big water jug in the kitchen.)  If you leave something out in the kitchen or make a mess, please use one of the “guest” clothespins to signify your awareness.  We usually have a house dinner every Monday, and you are more than welcome to join!
+          %li
+            %p
+              %strong Dishwasher:
+              To use the dishwasher, place one of the little detergent pods into the open compartment inside the dishwasher and slide over lid; select cycle and close dishwasher to start.  You will see a red light on the floor if the dishwasher is running.  Please help us keep our kitchen clean by either putting dirty dishes in the dishwasher or hand-washing them if dishwasher is running.  We all pitch in to put clean dishes away.
+          %li
+            %p
+              %strong Laundry:
+              There’s a laundry room in the basement you’re welcome to use, and a magnet labeled “guest” for you to put on the washer/dryer during use, so others know who to bug in case of any abandoned clothes.
+          %li
+            %p
+              %strong Quiet hours:
+              We generally try to practice quiet hours from 11pm-8am Sunday-Thursday nights, and a little bit later on the weekends.
+          %li
+            %p
+              %strong The rest of the house:
+              There are a million amazing nooks and crannies you’re welcome to experience during your stay.  Don’t hesitate to ask for a tour if you’d like to see for yourself!
       .modal-footer
         %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Close
 .container.content-container
