refactor recipients of user_created alert

--- a/app/views/user_mailer/user_created.html.haml
+++ b/app/views/user_mailer/user_created.html.haml
@@ -8,11 +8,11 @@
     %p
       Holy shit! #{@user.first_name} #{@user.last_name} just signed the guestbook!
     %ol
-      %li
+      %li{:style => "margin-bottom: 1em;"}
         = link_to "Check them out.", "#{root_url}?user_id=#{@user.id}"
-      %li
+      %li{:style => "margin-bottom: 1em;"}
         = link_to "Email them if you have any questions.", "mailto:#{@user.email}", :target => "_blank"
-      %li
+      %li{:style => "margin-bottom: 1em;"}
         - subject = @user.first_name + "is coming!"
         - body = "#{@user.first_name} #{@user.last_name} is coming! Get excited.%0A%0A#{@user_url}"
-        = link_to "Email Agape to share the good news", "mailto:agapesf@googlegroups.com?subject=#{subject}&body=#{body}"
+        = link_to "Email Agape to share the good news.", "mailto:agapesf@googlegroups.com?subject=#{subject}&body=#{body}"
