new og:description

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,9 +3,10 @@
 %head
   %title The Agape Guestbook
   %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}
-  %meta{name: "description", content: "The guest book for the Agape house."}
+  %meta{name: "description", content: "The guest book for the Agape house, 827 Guerrero."}
   -#FB Meta Tags
   %meta{property: "og:title", content: "The Agape Guestbook"}
+  %meta{property: "og:description", content: '"What is there more kindly than the feeling between host and guest?" - Aeschylus'}
   %meta{property: "og:type", content: "website"}
   %meta{property: "og:image", content: "#{root_url}agape-logo-1000.png"}
   %meta{content: "1000", property: "og:image:width"}
