change instances of guest book to guestbook

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
 %head
   %title The Agape Guestbook
   %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}
-  %meta{name: "description", content: "The guest book for the Agape house, 827 Guerrero."}
+  %meta{name: "description", content: "The guestbook for the Agape house, 827 Guerrero St., San Francisco."}
   -#FB Meta Tags
   %meta{property: "og:title", content: "The Agape Guestbook"}
   %meta{property: "og:description", content: '"What is there more kindly than the feeling between host and guest?" - Aeschylus'}
